# BitFun

./: .gitignore  AGENTS-CN.md  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  package-lock.json  package.json
.github/workflows/: ci.yml  cli-package-manual.yml
BitFun-Installer/: AGENTS-CN.md  AGENTS.md  package-lock.json  package.json
BitFun-Installer/src-tauri/: Cargo.toml
BitFun-Installer/src/pages/: LanguageSelect.tsx
BitFun-Installer/src/styles/: variables.css
BitFun-Installer/src/theme/: installerThemesData.ts
docs/architecture/: agent-runtime-services-design.md  cli-product-line-design.md  core-decomposition.md  i18n.md  opencode-plugin-surface-audit.md  platform-portability-design.md  plugin-runtime-host-design.md  product-architecture.md  product-customization-blueprint.md  theme-token-optimization.md
docs/architecture/extensions/: capability-runtime-integration-design.md  external-ai-work-sources-design.md  opencode-config-assets-adapter-design.md  opencode-extension-compatibility.md  opencode-external-integration-adapter-design.md  opencode-plugin-runtime-adapter-design.md  opencode-tui-plugin-adapter-design.md  plugin-runtime-host-design.md
docs/development/: i18n.md
docs/features/: session-runtime-usage-report-design.md
docs/plans/: core-decomposition-completed.md  core-decomposition-plan.md  opencode-extension-compatibility-plan.md  product-architecture-evolution-plan.md
docs/sdlc-harness/: README.md  design.md  implementation-plan.md
docs/sdlc-harness/architecture/: artifact-graph.md  project-profile-integration.md  quality-data-plane.md
docs/sdlc-harness/features/: agent-evaluation.md  opencode-compatibility.md  pr-quality-gate.md  requirement-impact-analysis.md  risk-classifier.md
docs/sdlc-harness/governance/: self-governance-notes.md
docs/sdlc-harness/research/: external-research.md
scripts/: audit-theme-colors.mjs  audit-theme-colors.test.mjs  check-core-boundaries.mjs  check-core-boundaries.test.mjs  desktop-tauri-build.mjs  desktop-tauri-build.test.mjs  dev.cjs  generate-i18n-contract.mjs  i18n-audit.mjs  i18n-contract.test.mjs  i18n-hardcoded-baseline.json  i18n-literal-fallback-baseline.json  i18n-locale-format-baseline.json  openbitfun-release-sync.sh  theme-color-governance-baseline.installer.json  theme-color-governance-baseline.json  theme-color-governance-baseline.mobile-web.json  theme-css-var-contract.mjs  theme-visual-governance-contract.json  validate-theme-visual-contract.mjs
scripts/core-boundaries/: checker.mjs  manifest-feature-helpers.mjs  self-test.mjs
scripts/core-boundaries/rules/: crate-layout.mjs  crate-rules.mjs  feature-rules.mjs  source-rules.mjs
src/apps/cli/: AGENTS.md  Cargo.toml  README.md  build.rs  (+1 more)
src/crates/adapters/opencode-adapter/: AGENTS-CN.md  AGENTS.md  Cargo.toml
src/crates/adapters/opencode-adapter/src/: agent_source.rs  command_source.rs  lib.rs  tool_source.rs
src/crates/adapters/opencode-adapter/tests/: opencode_command_adapter.rs  opencode_subagent_adapter.rs  tool_source_contracts.rs
src/crates/adapters/transport/: AGENTS.md  Cargo.toml
src/crates/adapters/transport/src/: emitter.rs  lib.rs  traits.rs
src/crates/adapters/transport/src/adapters/: mod.rs  tauri.rs  websocket.rs
src/crates/assembly/external-sources/: Cargo.toml
src/crates/assembly/external-sources/src/: lib.rs  subagent.rs  tool.rs
src/crates/assembly/external-sources/tests/: coordinator_contracts.rs  tool_coordinator_contracts.rs
src/crates/contracts/product-domains/: AGENTS-CN.md  AGENTS.md  Cargo.toml
src/crates/contracts/product-domains/src/: external_sources.rs  lib.rs  plugin_source.rs
src/crates/contracts/product-domains/src/miniapp/: builtin.rs  runtime_facade.rs
src/crates/contracts/product-domains/src/miniapp/builtin/assets/ppt-live/: build-bitfun.mjs  bundle.json  index.html  meta.json  style.css  ui.js
src/crates/contracts/product-domains/src/miniapp/builtin/assets/ppt-live/src/: agent-prompt.js  bitfun-backend-adapter.js  deck-ai.js  deck-project-contract.js  export-slide-browser.js  html2pptx-dom-core.js  i18n.js  render.js  state.js  style-presets.js
src/crates/contracts/product-domains/src/miniapp/builtin/assets/ppt-live/test/: dom-repair-diagnostics.test.mjs  generated-file-protocol.test.mjs  pptx-ooxml-artifact.test.mjs
src/crates/contracts/product-domains/tests/: external_source_contracts.rs  plugin_source_contracts.rs
src/crates/execution/agent-runtime/: AGENTS.md  Cargo.toml
src/crates/execution/agent-runtime/examples/: sdk_minimal.rs
src/crates/execution/agent-runtime/src/: agents.rs  custom_agent.rs  evidence_ledger.rs  file_read_state.rs  lib.rs  output_surface.rs  prompt.rs  runtime.rs  scheduler.rs  sdk.rs  skill_agent_snapshot.rs  tool_confirmation.rs  turn_cancellation.rs  user_questions.rs
src/crates/execution/agent-runtime/src/deep_review/: team_definition.rs
src/crates/execution/agent-runtime/src/skills/: selection.rs
src/crates/execution/agent-runtime/tests/: agent_registry_contracts.rs  custom_agent_mode_contracts.rs  custom_subagent_contracts.rs  prompt_contracts.rs  scheduler_contracts.rs  sdk_smoke.rs  tool_confirmation_contracts.rs  user_question_tool_contracts.rs
src/crates/execution/runtime-services/: Cargo.toml
src/crates/execution/runtime-services/src/: lib.rs  test_support.rs
src/crates/execution/runtime-services/tests/: runtime_services_contracts.rs
src/crates/execution/tool-execution/: AGENTS.md  Cargo.toml
src/crates/execution/tool-execution/src/: background_command_output.rs  context.rs  exec_command.rs  lib.rs  pipeline.rs
src/crates/execution/tool-execution/src/fs/: delete_path.rs  edit_file.rs  mod.rs  read_file.rs  write_file.rs
src/crates/execution/tool-execution/src/util/: read_line_prefix.rs
src/crates/execution/tool-execution/tests/: tool_pipeline_planning.rs
src/mobile-web/: package-lock.json  package.json  tsconfig.json
src/web-ui/: AGENTS.md  index.html  package.json  vite.config.canvas-runtime-plugin.ts  vite.config.ts
tests/e2e/: E2E-TESTING-GUIDE.md  E2E-TESTING-GUIDE.zh-CN.md
(+843 files in other folders)
