[package]
name = "bitfun-opencode-adapter"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "OpenCode-compatible source and candidate adapter for BitFun"

[lib]
name = "bitfun_opencode_adapter"
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
bitfun-plugin-runtime-host = { path = "../../execution/plugin-runtime-host" }
bitfun-runtime-ports = { path = "../../contracts/runtime-ports" }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
