[package]
name = "bitfun-agent-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Agent runtime contracts and owner decisions for BitFun"

[lib]
name = "bitfun_agent_runtime"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
bitfun-agent-tools = { path = "../tool-contracts" }
bitfun-events = { path = "../../contracts/events" }
bitfun-harness = { path = "../harness" }
bitfun-runtime-ports = { path = "../../contracts/runtime-ports" }
bitfun-runtime-services = { path = "../runtime-services" }
dashmap = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
