[package]
name = "bitfun-runtime-services"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Typed runtime service assembly for BitFun runtimes"

[lib]
name = "bitfun_runtime_services"
crate-type = ["rlib"]

[dependencies]
bitfun-events = { path = "../../contracts/events" }
bitfun-runtime-ports = { path = "../../contracts/runtime-ports" }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
